@@ -5817,9 +5817,15 @@ void Client::Handle_OP_InspectRequest(const EQApplicationPacket *app)
 {
 	Inspect_Struct* ins = (Inspect_Struct*) app->pBuffer;
 	Mob* tmp = entity_list.GetMob(ins->TargetID);
-	if(tmp != 0 && tmp->IsClient())
-		tmp->CastToClient()->QueuePacket(app); // Send request to target
+	if(tmp != 0 && tmp->IsClient()) {
+		if(tmp->CastToClient()->GetClientVersion() < EQClientSoF) {
+			tmp->CastToClient()->QueuePacket(app); // Send request to target
+		}
+		else {	//Inspecting an SoF or later client which make the server handle the request
+			CastToClient()->ProcessInspectRequest(tmp, this);
+		}
 
+	}
 #ifdef BOTS
 	if(tmp != 0 && tmp->IsBot())
 		Bot::ProcessBotInspectionRequest(tmp->CastToBot(), this);
