@@ -1,5 +1,8 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+==03/05/2010==
+Trevius: Inspecting SoF players is now possible.
+
 ==03/03/2010==
 Trevius: Added functionality to the EQEmu Web Tool to show IP information based on account searches.
 Derision: Set Message Type for spells wearing off, experience and leadership messages so they aren't classed as 'Other' by the client chat filters.
